bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: workright-hris
    labels:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: workright-hris
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: workright-hris
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api
                  image: workright-hris-api
                  imagePullPolicy: IfNotPresent
                  args:
                    - node
                    - dist/main.js
                  ports:
                    - name: api-3001
                      containerPort: 3001
