bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: workright-hris
    labels:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: workright-hris
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: workright-hris
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: db
                  image: postgres:15
                  imagePullPolicy: IfNotPresent
                  args:
                    - postgres
                    - -c
                    - shared_preload_libraries=pgcrypto
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-pgdata
