bridge/base/mailhog-deployment.yaml
#! mailhog-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mailhog
    namespace: workright-hris
    labels:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: mailhog
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: workright-hris
            com.docker.compose.service: mailhog
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: workright-hris
                com.docker.compose.service: mailhog
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: mailhog
                  image: mailhog/mailhog:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mailhog-1025
                      containerPort: 1025
                    - name: mailhog-8025
                      containerPort: 8025
