bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: workright-hris
    labels:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: api
    ports:
        - name: api-3001
          port: 3001
          protocol: TCP
          targetPort: api-3001

# check if there is at least one published port
