bridge/base/web-service.yaml
#! web-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web-published
    namespace: workright-hris
    labels:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: web
spec:
    selector:
        com.docker.compose.project: workright-hris
        com.docker.compose.service: web
    ports:
        - name: web-3000
          port: 3000
          protocol: TCP
          targetPort: web-3000
